--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,9 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+.ring-shadow {
+  box-shadow: inset 0 6px 6px 4px rgba(0, 0, 0, 0.25),
+    0 6px 6px 4px rgba(0, 0, 0, 0.25), inset 0 16px 20px #3961f3,
+    0 16px 16px #3961f3c7, inset 0 0 40px 120px #128dff4d, 0 0 64px 2px #3961f3,
+    0 0 4px 4px #05d4fc, inset 0 0 4px 4px #05d4fc;
+  mix-blend-mode: hard-light;
 }
